feat: implement /admin/users and fix some issses
