# src/main/java/com/api/chatstack/services/UserManagementService.java
@@ -1,5 +1,6 @@
 package com.api.chatstack.services;
 
+import com.chatstack.dto.UserListResponse;
 import org.springframework.core.io.Resource;
 
 import java.util.UUID;
@@ -7,4 +8,6 @@ import java.util.UUID;
 public interface UserManagementService {
 
     Resource getUserAvatar(UUID id, String avatar);
+
+    UserListResponse getAllUsers(Integer page, Integer size);
 }
